--- a/examples/ray-finetune-llm-deepspeed/ray_finetune_llm_deepspeed.ipynb
+++ b/examples/ray-finetune-llm-deepspeed/ray_finetune_llm_deepspeed.ipynb
@@ -43,7 +43,7 @@
     "auth = TokenAuthentication(\n",
     "    token = '',\n",
     "    server = '',\n",
-    "    skip_tls=False\n",
+    "    skip_tls=True\n",
     ")\n",
     "auth.login()"
    ]
@@ -57,20 +57,21 @@
    "source": [
     "# Configure the Ray cluster\n",
     "cluster = Cluster(ClusterConfiguration(\n",
-    "    name='ray',\n",
-    "    num_workers=7,\n",
-    "    worker_cpu_requests=16,\n",
-    "    worker_cpu_limits=16,\n",
-    "    head_cpu_requests=16,\n",
-    "    head_cpu_limits=16,\n",
-    "    worker_memory_requests=128,\n",
-    "    worker_memory_limits=256,\n",
-    "    head_memory_requests=128,\n",
-    "    head_memory_limits=256,\n",
+    "    name='my-ray-cluster',\n",
+    "    namespace='ray-finetune-llm',
+    "    num_workers=1,\n",
+    "    worker_cpu_requests=2,\n",
+    "    worker_cpu_limits=4,\n",
+    "    head_cpu_requests=1,\n",
+    "    head_cpu_limits=2,\n",
+    "    worker_memory_requests=10,\n",
+    "    worker_memory_limits=10,\n",
+    "    head_memory_requests=2,\n",
+    "    head_memory_limits=4,\n",
     "    # Use the following parameters with NVIDIA GPUs\n",
     "    # Ensure the Python version in the notebook image matches the version used in the Ray cluster to avoid compatibility issues\n",
     "    image=\"quay.io/rhoai/ray:2.35.0-py311-cu121-torch24-fa26\",\n",
-    "    head_extended_resource_requests={'nvidia.com/gpu':1},\n",
+    "    # head_extended_resource_requests={'nvidia.com/gpu':1},\n",
     "    worker_extended_resource_requests={'nvidia.com/gpu':1},\n",
     "    # Or replace them with these parameters for AMD GPUs\n",
     "    # image=\"quay.io/rhoai/ray:2.35.0-py311-rocm61-torch24-fa26\",\n",
@@ -138,8 +139,11 @@
     "s3_bucket = ''\n",
     "if not s3_bucket:\n",
     "    s3_bucket = os.environ.get('AWS_S3_BUCKET')\n",
+    "    print("s3_bucket ==>", s3_bucket)\n"
     "if s3_bucket:\n",
     "    storage_path = f's3://{s3_bucket}'"
+    "    print("storage_path ==>", storage_path)"
+    "    print(os.environ.get('AWS_ACCESS_KEY_ID'))"
    ]
   },
   {
@@ -156,8 +160,8 @@
     "    entrypoint=\"python ray_finetune_llm_deepspeed.py \"\n",
     "               \"--model-name=meta-llama/Meta-Llama-3.1-8B \"\n",
     "               \"--lora \"\n",
-    "               \"--num-devices=8 \"\n",
-    "               \"--num-epochs=3 \"\n",
+    "               \"--num-devices=2 \"\n",
+    "               \"--num-epochs=1 \"\n",
     "               \"--ds-config=./deepspeed_configs/zero_3_offload_optim_param.json \"\n",
     "               f\"--storage-path={storage_path}/ray_finetune_llm_deepspeed/ \"\n",
     "               \"--batch-size-per-device=32 \"\n",
@@ -165,9 +169,9 @@
     "    runtime_env={\n",
     "        \"env_vars\": {\n",
     "            # Set the following variables if using AWS S3 as storage\n",
-    "            # 'AWS_ACCESS_KEY_ID': os.environ.get('AWS_ACCESS_KEY_ID'),\n",
-    "            # 'AWS_SECRET_ACCESS_KEY': os.environ.get('AWS_SECRET_ACCESS_KEY'),\n",
-    "            # 'AWS_DEFAULT_REGION': os.environ.get('AWS_DEFAULT_REGION'),\n",
+    "             'AWS_ACCESS_KEY_ID': os.environ.get('AWS_ACCESS_KEY_ID'),\n",
+    "             'AWS_SECRET_ACCESS_KEY': os.environ.get('AWS_SECRET_ACCESS_KEY'),\n",
+    "             'AWS_DEFAULT_REGION': os.environ.get('AWS_DEFAULT_REGION'),\n",
     "            'HF_HOME': f'{storage_path}/.cache'\n",
     "        },\n",
     "        'pip': 'requirements.txt',\n",
