--- a/examples/ray-finetune-llm-deepspeed/ray_finetune_llm_deepspeed.ipynb
+++ b/examples/ray-finetune-llm-deepspeed/ray_finetune_llm_deepspeed.ipynb
@@ -58,7 +58,7 @@
     "# Configure the Ray cluster\n",
     "cluster = Cluster(ClusterConfiguration(\n",
     "    name='my-ray-cluster',\n",
-    "    namespace='ray-finetune-llm',
+    "    namespace='ray-finetune-llm',\n",
     "    num_workers=1,\n",
     "    worker_cpu_requests=2,\n",
     "    worker_cpu_limits=4,\n",
@@ -139,11 +139,11 @@
     "s3_bucket = ''\n",
     "if not s3_bucket:\n",
     "    s3_bucket = os.environ.get('AWS_S3_BUCKET')\n",
-    "    print("s3_bucket ==>", s3_bucket)\n"
+    "    print("s3_bucket ==>", s3_bucket)\n",
     "if s3_bucket:\n",
     "    storage_path = f's3://{s3_bucket}'"
-    "    print("storage_path ==>", storage_path)"
-    "    print(os.environ.get('AWS_ACCESS_KEY_ID'))"
+    "    print("storage_path ==>", storage_path)",
+    "    print(os.environ.get('AWS_ACCESS_KEY_ID'))",
    ]
   },
   {
